Render the keyboard and keep track of notes played by clicking on it

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,34 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.keyboard {
+  position: relative;
+  margin: 30px auto;
+}
+
+.black-key,
+.white-key
+{
+  position: absolute;
+  top: 0px;
+  border: 1px solid black;
+}
+
+.black-key {
+  background-color: black;
+  z-index: 1;
+}
+
+.white-key {
+  background-color: white;
+}
+
+.next-button {
+  width: 100px;
+  height: 30px;
+  font-size: 18px;
 }
